enable more enterprise features