@@ -32,7 +32,20 @@ jacocoTestReport {
     dependsOn test
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 group = 'jstern'
 version = '1.0'
 description = 'aoc2021'
-java.sourceCompatibility = 17
+java.sourceCompatibility = "17.PREVIEW"
+targetCompatibility = '17.PREVIEW'
